Actualizar configuración y añadir nuevos componentes

--- a/src/components/AudioPlayer.astro
+++ b/src/components/AudioPlayer.astro
@@ -16,7 +16,7 @@ const { src } = Astro.props; // Puedes pasar el src y el título del audio como 
     align-items: center;
     border-radius: 8px; /* Bordes redondeados */
     padding: 20px;
-    margin: 20px 0; /* Espaciado vertical */
+    margin: 20px 10%; /* Espaciado vertical */
    
   }
 
