--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import HeroImage from '../components/HeroImage.astro';
+import '../components/count/Count.module.css';
 
 interface Props {
 	title: string;
