--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,6 +29,9 @@ const targetDate = new Date("December 25, 2024 00:00:00"); // Fecha objetivo
     </div>
 
     <WeddingEvent />
+    <WeddingEvent />
+    <br>
+    <h1 class="initial-text">DRESSCODE</h1>
   </main>
 </Layout>
 
