--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,6 +45,9 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 		background: #d9d9d9;
 	}
+	body{
+		margin: 0;
+	}
 	code {
 		font-family:
 			Menlo,
