--- a/src/components/ConfirmAssistance.astro
+++ b/src/components/ConfirmAssistance.astro
@@ -23,6 +23,7 @@ import Button from "./Button.astro";
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        margin-top: 40px;
         margin-bottom: 40px;
     }
 </style>
