--- a/src/components/Dresscode.astro
+++ b/src/components/Dresscode.astro
@@ -17,6 +17,8 @@ const { imgD, title, subtitle1, subtitle2 } = Astro.props;
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        margin-top: 20px;
+        margin-bottom: 40px;
     }
     .dresscode .title{
         font-size: 1.5rem;
